* Update to S5P L2 product ingestion.

1.8 2019-07-31
~~~~~~~~~~~~~~

* Added R interface.

* Improved derivation for tropopause altitude/pressure (to not return NaN).

* Added derivations for gravity.

* Added derivations to convert between total air and dry air mixing ratios.

* Fixed valid() operation to properly use valid_min/valid_max attribute values.

* Fixed issue in adding *_count variable in append/merge when count variable
  had more than one dimension.

* Updates to ECMWF GRIB, GEOMS MWR, and S5P L2 product ingestions.

1.7 2019-06-06
~~~~~~~~~~~~~~

* Added --no-history option to harpconvert, hardump, and harpmerge.

* Added harp.execute_operations() and harp.convert_unit() to Python interface.

* Added optional min_collocation_index/max_collocation_index arguments to
  collocate_left()/collocate_right() operations.

* harp_product_set_history() and harp_product_set_source_product() now accept
  NULL as argument to clear the current value.

* Appending/merging products now automatically adds missing *_count variables.

* Fixed potential crash during initialization of HARP ingestion module.

* Fixed invalid results when using bin_spatial with latitude_bounds {time,2}
  and longitude_bounds {time,2} variables (i.e. range instead of polygon).

* Fixed array ordering in MATLAB interface. Multi-dimensional arrays are now
  represented from fastest running to slowest (=fortran ordering) as intended.

* Update to S5P L2 product ingestion.

1.6 2019-04-29
~~~~~~~~~~~~~~

* Added clamp() and squash() operations.

* Allow bin() and sort() operations to be performed using a set of variables.

* harp_product_sort() now takes a list of variables.

* The rename() operation no longer fails if the source variable does not exist
  but a variable with the target name already exists.

* The python harp.import_product() function now uses the C library to perform
  the contactenation of products.

* Added post_operations argument to python harp.import_product() function.
