@@ -1,3 +1,6 @@
+* bin() operation now replaces global 'count' variable if existing one was
+  not one-dimensional (or otherwise invalid).
+
 * Update to S5P L2 product ingestion.
 
 1.8 2019-07-31
